@@ -114,6 +114,8 @@
 71. Store favourite streams as '[Radio Streams]' MPD playlist.
 72. For tracks for mutliple-artist albums, show as 'title - artist' and not
     'artist - title'
+73. In playqueue, if song's artist is different to album artist, then show song
+    as 'title - artist'
 
 1.3.4
 -----
